// Group Savings API Database Schema

Table users {
  id              uuid       [pk]
  email           varchar    [not null, unique]
  password_hash   varchar    [not null]
  role            varchar    [not null, default: 'Member']
  is_active       boolean    [not null, default: true]
  created_at      datetime   [not null]
}

Table members {
  id              uuid       [pk]
  user_id         uuid       [not null, ref: > users.id]
  first_name      varchar    [not null]
  last_name       varchar    [not null]
  phone           varchar
  address         varchar
  date_of_birth   datetime
  gender          varchar
  account_balance decimal(18,2) [not null, default: 0]
  is_deleted      boolean    [not null, default: false]
}

Table account_types {
  id              int        [pk, increment]
  name            varchar(100) [not null]
  description     varchar(500) [not null]
}

Table payment_methods {
  id              uuid       [pk]
  customer_id     uuid       [not null]
  account_type_id int        [not null, ref: > account_types.id]
  provider_name   varchar(100) [not null]
  account_name    varchar(200) [not null]
  account_number  varchar(50) [not null]
  is_primary      boolean
  currency        varchar(3) [not null]
  country_code    varchar(2) [not null]
  created_at      datetime   [not null]
  member_id       uuid       [ref: > members.id]
}

Table groups {
  id              uuid       [pk]
  name            varchar(200) [not null]
  created_by      uuid       [not null, ref: > users.id]
  status          varchar(50) [not null, default: 'Active']
  created_at      datetime   [not null]
  is_deleted      boolean    [not null, default: false]
}

Table group_roles {
  id              int        [pk, increment]
  name            varchar(50) [not null]
  description     varchar(200)
}

Table group_members {
  id              uuid       [pk]
  group_id        uuid       [not null, ref: > groups.id]
  user_id         uuid       [not null, ref: > users.id]
  role_id         int        [not null, ref: > group_roles.id]
  joined_at       datetime   [not null]
  total_contributed decimal(18,2) [not null, default: 0]
  is_deleted      boolean    [not null, default: false]
}

Table group_sessions {
  id              uuid       [pk]
  group_id        uuid       [not null, ref: > groups.id]
  target_amount   decimal(18,2) [not null]
  target_date     datetime   [not null]
  start_date      datetime   [not null]
  frequency       varchar(20) [not null]
  status          varchar(50) [not null, default: 'Active']
  total_contributed decimal(18,2) [not null, default: 0]
  is_deleted      boolean    [not null, default: false]
}

Table contributions {
  id              uuid       [pk]
  group_session_id uuid      [not null, ref: > group_sessions.id]
  user_id         uuid       [not null, ref: > users.id]
  amount          decimal(18,2) [not null]
  date            datetime   [not null]
  type            varchar(20) [not null]
  is_deleted      boolean    [not null, default: false]
}

Table notifications {
  id              uuid       [pk]
  user_id         uuid       [not null, ref: > users.id]
  message         varchar(1000) [not null]
  type            varchar(50) [not null]
  created_at      datetime   [not null]
}

Table group_invitations {
  id              uuid       [pk]
  group_id        uuid       [not null, ref: > groups.id]
  inviter_id      uuid       [not null, ref: > users.id]
  invitee_email   varchar    [not null]
  sent_at         datetime   [not null]
  accepted        boolean    [not null, default: false]
  accepted_at     datetime
  is_deleted      boolean    [not null, default: false]
}

Table savings_goals {
  id              uuid       [pk]
  group_session_id uuid      [not null, ref: > group_sessions.id]
  name            varchar    [not null]
  target_amount   decimal(18,2) [not null]
  current_amount  decimal(18,2) [not null, default: 0]
  target_date     datetime   [not null]
  is_deleted      boolean    [not null, default: false] 
}


// Reporting endpoints available:
// - GET /api/ContributionReports/ByUser
// - GET /api/ContributionReports/ByGroup
// - GET /api/ContributionReports/BySession

Table audit_logs {
  id              uuid       [pk]
  group_id        uuid       [ref: > groups.id]
  member_id       uuid       [ref: > members.id]
  user_id         uuid       [ref: > users.id]
  action          varchar    [not null]
  entity_type     varchar    [not null]
  entity_id       uuid
  timestamp       datetime   [not null]
  details         varchar
}
